--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,8 @@ classifiers =
     Operating System :: OS Independent
 
 [options]
+zip_safe = True
+include_package_data = True
 package_dir =
     = src
 packages = find:
@@ -25,3 +27,5 @@ install_requires =
     bokeh>=2.3.3,<3
 [options.packages.find]
 where = src
+[options.package_data]
+BroadSword = *.so
