--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = BroadSword
-version = 0.0.6
+version = 0.0.7
 author = Cody Somers
 author_email = cas003@usask.ca
 description = Python script to broaden calculated spectra from Wien2k and compare to experimental data at the REIXS Beamline at the Canadian Light Source, Saskatoon, Canada.
@@ -28,4 +28,4 @@ install_requires =
 [options.packages.find]
 where = src
 [options.package_data]
-BroadSword = *.so
+BroadSword = *.so, *.dylib
