--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = BroadSword
-version = 0.1.1
+version = 0.1.2
 author = Cody Somers
 author_email = cas003@usask.ca
 description = Python script to broaden calculated spectra from Wien2k and compare to experimental data at the REIXS Beamline at the Canadian Light Source, Saskatoon, Canada.
@@ -25,6 +25,7 @@ install_requires =
     numpy
     pandas
     bokeh>=2.3.3,<3
+    reixs
 [options.packages.find]
 where = src
 [options.package_data]
