Added small usability features
Ability to clear figures in case of not plotting experimental
Ability to set maximum number of sites
Removed bokeh versioning and reixs dependence for easier installation
Removed deprecated broadenC function and it's compilations

Next step is to remove all global variables and self contain them within the class

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = BroadSword
-version = 0.2.2
+version = 0.2.3
 author = Cody Somers
 author_email = cas003@usask.ca
 description = Python script to broaden calculated spectra from Wien2k and compare to experimental data at the REIXS Beamline at the Canadian Light Source, Saskatoon, Canada.
@@ -24,9 +24,6 @@ python_requires = >=3.6
 install_requires = 
     numpy
     pandas
-    bokeh>=2.3.3,<3
-    reixs
+    bokeh
 [options.packages.find]
 where = src
-[options.package_data]
-BroadSword = *.so, *.dylib, *.c
