Updated install requires

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = BroadSword
-version = 0.2.3
+version = 0.2.4
 author = Cody Somers
 author_email = cas003@usask.ca
 description = Python script to broaden calculated spectra from Wien2k and compare to experimental data at the REIXS Beamline at the Canadian Light Source, Saskatoon, Canada.
@@ -20,10 +20,12 @@ include_package_data = True
 package_dir =
     = src
 packages = find:
-python_requires = >=3.6
+python_requires = >=3.9
 install_requires = 
     numpy
     pandas
     bokeh
+    jupyter_bokeh
+    notebook
 [options.packages.find]
 where = src
